test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_if_expr_with_stmts.draco
proc main() void : 

  a := if a1 then a2:=0; a2 elif a3 then a4:=0; a4 elif a5 then a6:=0; a6 else a7:=0; a7 fi;

corp;

