test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_if_expr_no_val_else_branch.draco
proc main() void : 

  a := if a1 then a2 elif a3 then a4 else a7 := 0; fi;

corp;

